<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    style="@style/Widget.MaterialComponents.BottomAppBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!--navigationdrawer: -->

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/head_drawer"
        app:menu="@menu/top_navigation_menu" />


</androidx.drawerlayout.widget.DrawerLayout>


    <!-- ********************************************************************* -->


    <!--

    <?xml version="1.0" encoding="utf-8"?>

    <androidx.drawerlayout.widget.DrawerLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity"
        tools:openDrawer="start">

        <com.google.android.material.circularreveal.CircularRevealRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            here we pass the menu with items to the buttom navigation-
            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:itemTextColor="@color/cardview_light_background"
                app:menu="@menu/bottom_navigation_menu" />



             container just above the bottom navigation for the fragment
            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottom_navigation"
                android:background="#00000000">

            </FrameLayout>

             creating the drawernav at the top:

            <androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/drawer_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.navigation.NavigationView
                    android:id="@+id/nav_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:gravity="start"
                    app:menu="@menu/top_navigation_menu" />
            </androidx.drawerlayout.widget.DrawerLayout>



             here we put our toolbar

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!- the drawer navigation by itself

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary"
                    android:elevation="4dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:popupTheme="@style/Widget.AppCompat.Light.ActionBar" />


                <FrameLayout
                    android:id="@+id/fragment_topnav_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>


            </LinearLayout>





        <    </androidx.drawerlayout.widget.DrawerLayout >


        </com.google.android.material.circularreveal.CircularRevealRelativeLayout>
    -->
    <!--     -->