...
        app:layout_constraintVertical_bias="0.0"
        android:scaleType="fitXY"

        app:srcCompat="@drawable/deadline" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="154dp"
        android:layout_height="137dp"
        android:layout_gravity="center"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
...
