...
    <string name="register">Register</string>
    <string name="accomodation">Accomodation</string>
    <string name="Register">Register</string>
    <string name="studyOption">Study Options</string>
    <string name="livingWorkin">Living and working in DK</string>
    <string name="teachinStyle">Teaching style in DK</string>
    <string name="navigation_open_drawer">Open drawerK</string>
    <string name="navigation_close_drawer">Close drawerK</string>
    <string name="homeLongtext">Studying abroad is like any travel
        - it inspires you to see things in new ways. We invite you to study in Denmark
        - to be inspired and to gain an excellent foundation for your future career.</string>


...
    <string name="app_deadline">Application deadline March 22, 2021</string>
    <string name="nav_Deadline">Application deadline</string>
    <string name="Rv_title">Univerity</string>
    <string name="listOfUni">List of Danish universities</string>
    <string name="Login">Login</string>
    <string name="BookSearch">Book Search</string>
    <string name="Search_">Search</string>
    <string name="optagelseDk">Applications to undergradute higher education in Denmark
        are assessed locally at the institutions but coordinated centrally in The Coordinated
        Admission. Consequently prospective students do not apply directly to any single
        educational institution, but through the national admission website:
        www.optagelse.dk \n The Ministry of higher education in Denmark lines up the rules
        for applying to a Danish Education with a foreign exam. However, it is the individual
...
